--- a/package.json
+++ b/package.json
@@ -9,6 +9,20 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.1.7"
+    "@astrojs/netlify": "^6.1.0",
+    "@astrojs/node": "^9.0.2",
+    "@astrojs/react": "^4.1.6",
+    "@astrojs/tailwind": "^5.1.5",
+    "@portabletext/react": "^3.2.0",
+    "@sanity/astro": "^3.1.9",
+    "@sanity/client": "^6.27.1",
+    "@sanity/vision": "^3.71.2",
+    "@sanity/visual-editing": "^2.12.8",
+    "@tailwindcss/typography": "^0.5.16",
+    "astro": "^5.1.7",
+    "dotenv": "^16.4.7",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "sanity": "^3.71.2"
   }
 }
