--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "",
+  "name": "astro-blog",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
+    "start": "astro dev",
     "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro"
+    "preview": "astro preview"
   },
   "dependencies": {
     "@astrojs/netlify": "^6.1.0",
